# better-code-rust-2022

./: README.md
http-api/: .env  Cargo.toml  Dockerfile  Makefile  demo.local.restbook  demo.online.restbook
http-api/kubernetes/: namespace.yml
http-api/kubernetes/app/: deployment.yml  service.yml
http-api/migrations/2022-11-07-063638_products/: down.sql  up.sql
http-api/src/: db.rs  main.rs  schema.rs
http-api/src/healthz/: api.rs  mod.rs  models.rs
http-api/src/products/: api.rs  mod.rs  models.rs
k8s-walker/: Cargo.toml
k8s-walker/src/: main.rs
redurce-product-price/: .dockerignore  Cargo.toml  Dockerfile  Makefile  demo.local.restbook  demo.online.restbook  spin.container.toml  spin.toml
redurce-product-price/kubernetes/: namespace.yml
redurce-product-price/kubernetes/app/: deployment.yml  service.yml
redurce-product-price/src/: lib.rs
redurce-product-price/src/models/: mod.rs  price_reduction.rs
